# obspec-utils

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
docs/: api.md  benchmark.md  caching-architecture.md  changelog.md  index.md
docs/api/: aiohttp.md  cache.md  glob.md  obspec.md  obstore.md  protocols.md  readers.md  registry.md  splitting.md  tracing.md  typing.md
docs/design/: caching.md  glob.md  protocols.md  registry-store-protocols.md
docs/examples/nisar/: README.md  analyze.py  benchmark.py  layout.py  virtualize.py  waterfall.py
docs/user-guide/: caching-remote-data.md  debugging-data-access.md  finding-files.md  globbing.md  opening-data-with-rasterio.md  opening-data-with-xarray.md
scripts/: benchmark_reader_implementations.py  benchmark_readers.py  benchmark_timings.json
src/obspec_utils/: __init__.py  aiohttp.py  cache.py  file_handlers.py  glob.py  obspec.py  obstore.py  registry.py  splitting.py  tracing.py  typing.py
src/obspec_utils/kyle/: _block_cache.py
src/obspec_utils/protocols/: __init__.py  _protocols.py
src/obspec_utils/readers/: __init__.py  _block.py  _buffered.py  _eager.py  _parallel.py
src/obspec_utils/stores/: __init__.py  _aiohttp.py
src/obspec_utils/wrappers/: __init__.py  _cache.py  _splitting.py  _tracing.py
tests/: conftest.py  mocks.py  test_aiohttp.py  test_block_reader.py  test_buffered_reader.py  test_cache.py  test_deprecated_imports.py  test_eager_reader.py  test_glob.py  test_glob_comparison.py  test_glob_osn.py  test_glob_s3.py  test_parallel_reader.py  test_readers.py  test_registry.py  test_splitting.py  test_store_wrappers.py  test_tracing.py  test_version.py  test_xarray.py
tests/kyle/: test_block_cache.py
