[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[project]
name = "obspec-utils"
dynamic = ["version"]
description = "Utilities for interacting with object storage, based on obspec"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Max Jones", email = "14077947+maxrjones@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "obspec",
  "obstore",
]

[project.urls]
Documentation = "https://obspec-utils.readthedocs.io"
Issues = "https://github.com/virtual-zarr/obspec-utils/issues"
Source = "https://github.com/virtual-zarr/obspec-utils"

[dependency-groups]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-accept",
    "rich",
    "mypy",
    "pytest-xdist",
    "minio",
]
xarray = [
  "xarray",
  "h5netcdf",
]
fsspec = [
  "s3fs",
  "fsspec",
]
dev = [
    "ipykernel>=6.29.5",
]
docs = [
    "mkdocs-material[imaging]>=9.6.14",
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
    "markdown-exec[ansi]",
    "ruff",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch]
version.source = "vcs"

[tool.hatch.build]
hooks.vcs.version-file = "src/obspec_utils/_version.py"

[tool.coverage.run]
source_pkgs = ["obspec_utils", "tests"]
branch = true
parallel = true
omit = [
  "src/obspec_utils/__about__.py",
]

[tool.coverage.paths]
obspec_utils = ["src/obspec_utils", "*/obspec-utils/src/obspec_utils"]
tests = ["tests", "*/obspec-utils/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
